--- a/Strategy (GitHub Viewable).ipynb
+++ b/Strategy (GitHub Viewable).ipynb
@@ -7,6 +7,9 @@
    "source": [
     "# Crude Oil Multi-Factor Walkforward Strategy\n",
     "\n",
+    "**Disclaimer:** The strategy logic, hypothesis generation, and research direction were independently developed by the author. AI assistance was utilized solely for code generation and syntax correction.\n",
+    "\n",
+    "\n",
     "This notebook walks through how I built and evaluated a **multi-factor walkforward trading strategy** for Brent Crude Oil futures (`CO1 Comdty`).\n",
     "\n",
     "Here's what we'll cover:\n",
